--- a/stack-8.2.yaml
+++ b/stack-8.2.yaml
@@ -1,25 +1,4 @@
-resolver: lts-9.0
-
-setup-info:
-  ghc:
-    windows64:
-      8.2.1:
-        url: https://downloads.haskell.org/~ghc/8.2.1/ghc-8.2.1-x86_64-unknown-mingw32.tar.xz
-        sha1: 51df67de9cb5cad1420626c12c063b2896dceb65
-        content-length: 175053796
-    linux64:
-      8.2.1:
-        url: https://downloads.haskell.org/~ghc/8.2.1/ghc-8.2.1-x86_64-deb8-linux.tar.xz
-        sha1: 3e52527de6f1cad6d7f1c392ddde8148116d4e36
-        content-length: 126809836
-    macosx:
-      8.2.1:
-        url: https://downloads.haskell.org/~ghc/8.2.1/ghc-8.2.1-x86_64-apple-darwin.tar.xz
-        sha1: 101405b4fef87a44adf34e48bb63a1a4e945c5c9
-        content-length: 114088292
-
-compiler-check: match-exact
-compiler: ghc-8.2.1
+resolver: nightly-2017-07-31
 
 packages:
   - .
@@ -29,8 +8,4 @@ packages:
     extra-dep: true
 
 extra-deps:
-  - array-0.5.2.0
-  - deepseq-1.4.3.0
-  - filepath-1.4.1.2
-  - unix-2.7.2.2
   - protolude-0.2
