--- a/numhask.cabal
+++ b/numhask.cabal
@@ -1,5 +1,5 @@
 name: numhask
-version: 0.1.0
+version: 0.1.1
 synopsis:
   A numeric prelude
 description:
@@ -55,7 +55,9 @@ library
     vector >= 0.11 && < 0.13,
     QuickCheck >= 2.8 && < 3,
     adjunctions >= 4.3 && < 5,
-    distributive >= 0.5 && < 0.6
+    distributive >= 0.5 && < 0.6,
+    singletons >= 2.2 && < 3,
+    matrix >=0.3.5.0 && <0.4
   default-extensions:
     NoImplicitPrelude,
     OverloadedStrings,
