--- a/numhask.cabal
+++ b/numhask.cabal
@@ -3,7 +3,7 @@
 -- see: https://github.com/sol/hpack
 
 name:           numhask
-version:        0.1.2
+version:        0.1.3
 synopsis:       A numeric prelude
 description:    A numeric prelude, providing a clean structure for numbers and operations that combine them.
 category:       mathematics
@@ -44,20 +44,11 @@ library
     NumHask.Algebra.Metric
     NumHask.Algebra.Module
     NumHask.Algebra.Multiplicative
-    NumHask.Shape
-    NumHask.Vector
-    NumHask.Matrix
   other-modules:
     Paths_numhask
   build-depends:
     base >=4.7 && <4.11,
-    protolude >=0.1 && <0.3,
-    vector >=0.11 && <0.13,
-    QuickCheck >=2.8 && <3,
-    adjunctions >=4.3 && <5,
-    distributive >=0.5 && <0.6,
-    singletons >=2.2 && <3,
-    matrix >=0.3.5.0 && <0.4
+    protolude >=0.1 && <0.3
   default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
 
 test-suite test
@@ -68,8 +59,9 @@ test-suite test
   main-is: test.hs
   build-depends:
     base >=4.7 && <5,
+    QuickCheck >=2.8 && <3,
+    doctest,
     numhask,
     tasty,
-    tasty-quickcheck,
-    doctest
+    tasty-quickcheck
   default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
