Removed everything except the algebra

--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name: numhask
-version: '0.1.4.0'
-synopsis: A numeric prelude
-description: A numeric prelude, providing a clean structure for numbers and operations
+version: '0.2.0.0'
+synopsis: A numeric base
+description: A numeric base, providing a clean structure for numbers and operations
   that combine them.
 category: mathematics
 author: Tony Day
@@ -14,20 +14,12 @@ extra-source-files:
 - stack.yaml
 default-extensions:
 - NegativeLiterals
-- NoImplicitPrelude
 - OverloadedStrings
 - UnicodeSyntax
-dependencies:
-- QuickCheck >=2.8 && <3
-- protolude >=0.1 && <0.3
-- tasty
-- tasty-quickcheck
 library:
   source-dirs: src
   ghc-options: -Wall
   exposed-modules:
-  - NumHask.Prelude
-  - NumHask.Examples
   - NumHask.Algebra
   - NumHask.Algebra.Additive
   - NumHask.Algebra.Basis
@@ -40,17 +32,5 @@ library:
   - NumHask.Algebra.Module
   - NumHask.Algebra.Multiplicative
   - NumHask.Algebra.Singleton
-  - NumHask.Laws
   dependencies:
   - base >=4.7 && <4.11
-tests:
-  test:
-    main: test.hs
-    source-dirs: test
-    dependencies:
-    - base >=4.7 && <5
-    - QuickCheck >=2.8 && <3
-    - doctest
-    - numhask
-    - tasty
-    - tasty-quickcheck
