--- a/numhask-prelude/stack.yaml
+++ b/numhask-prelude/stack.yaml
@@ -2,7 +2,8 @@ resolver: nightly-2018-04-01
 
 packages:
   - .
-  - ../numhask
+  - location: ../numhask
+    extra-dep: true
 
 extra-deps:
   - protolude-0.2.2
