--- a/numhask-array/stack.yaml
+++ b/numhask-array/stack.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2018-04-01
+resolver: nightly-2018-04-03
 
 packages:
   - .
@@ -8,8 +8,5 @@ packages:
     extra-dep: true
 
 extra-deps:
-  - dimensions-0.3.2.0
+  - dimensions-0.3.2.0 # not on stack
   - protolude-0.2.2
-  - singletons-2.4.1
-
-allow-newer: true
