--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -1,5 +1,5 @@
 name:           numhask-prelude
-version:        0.3.0.0
+version:        0.0.1.0
 synopsis:       A numeric prelude
 description:    A numeric prelude, combining protolude and numhask.
 category:       mathematics
@@ -24,7 +24,12 @@ library
   hs-source-dirs:
       src
   default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
-  ghc-options: -Wall
+  ghc-options:
+      -Wall
+      -Wcompat
+      -Wincomplete-record-updates
+      -Wincomplete-uni-patterns
+      -Wredundant-constraints
   build-depends:
       QuickCheck >=2.8 && <3
     , base >=4.7 && <4.12
