--- a/numhask-array/numhask-array.cabal
+++ b/numhask-array/numhask-array.cabal
@@ -32,7 +32,7 @@ library
       -Wincomplete-uni-patterns
       -Wredundant-constraints
   build-depends:
-      QuickCheck
+      QuickCheck >= 2.0 && < 2.12
     , adjunctions >=4.0 && <5
     , base >=4.7 && <4.12
     , deepseq >=1.4.2.0 && <2
