--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -53,6 +53,7 @@
 - ignore: {name: Use tan, within: NumHask.Algebra.Field}
 - ignore: {name: Use logBase, within: NumHask.Algebra.Field}
 - ignore: {name: Use -}
+- ignore: {name: Eta reduce, within: NumHask.Algebra.Metric}
 
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
