--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -39,6 +39,7 @@ library
     , tasty-quickcheck >= 0.9.2 && <1.0
   exposed-modules:
       NumHask.Prelude
+      NumHask.Error
       NumHask.Examples
       NumHask.Laws
   other-modules:
