--- a/numhask-prelude/numhask-prelude.cabal
+++ b/numhask-prelude/numhask-prelude.cabal
@@ -54,6 +54,7 @@ test-suite test
   default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
   build-depends:
       base >=4.7 && <5
+    , QuickCheck >=2.8 && <3
     , doctest
     , numhask-prelude
     , tasty
