--- a/hunit-numhask/stack.yaml
+++ b/hunit-numhask/stack.yaml
@@ -2,9 +2,9 @@ resolver: nightly-2018-04-04
 
 packages:
 - .
+- ../numhask
 
-extra-deps: 
-- numhask-0.2.0.0
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
