--- a/checkers-numhask/checkers-numhask.cabal
+++ b/checkers-numhask/checkers-numhask.cabal
@@ -32,6 +32,7 @@ test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       LibSpec
   build-depends:       base
                      , checkers-numhask
                      , hspec
