--- a/hunit-numhask/hunit-numhask.cabal
+++ b/hunit-numhask/hunit-numhask.cabal
@@ -30,6 +30,7 @@ test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       LibSpec
   build-depends:       base
                      , hunit-numhask
                      , hspec
