--- a/numhask-test/numhask-test.cabal
+++ b/numhask-test/numhask-test.cabal
@@ -1,7 +1,7 @@
-name:           numhask-prelude
+name:           numhask-test
 version:        0.1.0.0
-synopsis:       A numeric prelude
-description:    A numeric prelude, combining protolude and numhask.
+synopsis:       Laws and tests for numhask
+description:    Laws and tests for numhask.
 category:       mathematics
 homepage:       https://github.com/tonyday567/numhask#readme
 bug-reports:    https://github.com/tonyday567/numhask/issues
@@ -31,15 +31,13 @@ library
       -Wincomplete-uni-patterns
       -Wredundant-constraints
   build-depends:
-      base >=4.7 && <4.12
-    , numhask >=0.2.2.0 && <0.3
-    , protolude >=0.1 && <0.3
+      QuickCheck >=2.8 && <3
+    , base >=4.7 && <4.12
+    , numhask-prelude >=0.1.0.0 && <0.2
+    , tasty >= 1.0.1.1 && <1.2
+    , tasty-quickcheck >= 0.9.2 && <1.0
   exposed-modules:
-      NumHask.Prelude
-      NumHask.Error
-      NumHask.Examples
-  other-modules:
-      Paths_numhask_prelude
+      NumHask.Laws
   default-language: Haskell2010
 
 test-suite test
@@ -52,7 +50,7 @@ test-suite test
       base >=4.7 && <5
     , QuickCheck >=2.8 && <3
     , doctest
-    , numhask-prelude
-  other-modules:
-      Paths_numhask_prelude
+    , numhask-test
+    , numhask-prelude >= 0.1.0.0 && < 0.2
+    , tasty
   default-language: Haskell2010
