add NumHask.Data, addresses #49

--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -50,4 +50,6 @@ library
       NumHask.Algebra.Module
       NumHask.Algebra.Multiplicative
       NumHask.Algebra.Singleton
+      NumHask.Data                  
+  other-modules:
   default-language: Haskell2010
