--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -50,6 +50,6 @@ library
       NumHask.Algebra.Module
       NumHask.Algebra.Multiplicative
       NumHask.Algebra.Singleton
-      NumHask.Data                  
+      NumHask.Data.Complex
   other-modules:
   default-language: Haskell2010
