fixed derp, added Complex instances

--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -50,6 +50,7 @@ library
       NumHask.Algebra.Module
       NumHask.Algebra.Multiplicative
       NumHask.Algebra.Singleton
-      NumHask.Data.Complex
+      NumHask.Data
+      NumHask.Data.Complex            
   other-modules:
   default-language: Haskell2010
