--- a/numhask-graph/numhask-graph.cabal
+++ b/numhask-graph/numhask-graph.cabal
@@ -41,3 +41,16 @@ executable numhask-graph
     , protolude
     , text
   default-language: Haskell2010
+
+
+executable numhask-typeclasses
+  main-is: numhask-typeclasses.hs
+  hs-source-dirs:
+                 app
+  default-extensions: OverloadedStrings
+  build-depends:
+                base >=4.7 && <4.12
+              , containers
+              , haskell-src-exts
+              , optparse-applicative
+              , text
