--- a/numhask-graph/numhask-graph.cabal
+++ b/numhask-graph/numhask-graph.cabal
@@ -3,8 +3,8 @@ version:        0.1.0
 synopsis:       See readme.md
 description:    See readme.md for description
 category:       project
-homepage:       https://github.com/tonyday567/numhask-dev#readme
-bug-reports:    https://github.com/tonyday567/numhask-dev/issues
+homepage:       https://github.com/tonyday567/numhask#readme
+bug-reports:    https://github.com/tonyday567/numhask/issues
 author:         Tony Day
 maintainer:     tonyday567@gmail.com
 copyright:      Tony Day
@@ -15,8 +15,21 @@ cabal-version:  >= 1.10
 
 source-repository head
   type: git
-  location: https://github.com/tonyday567/numhask-dev
+  location: https://github.com/tonyday567/numhask
 
+executable numhask-typeclasses
+  main-is: numhask-typeclasses.hs
+  hs-source-dirs:
+                 app
+  default-extensions: OverloadedStrings
+  build-depends:
+                base >=4.7 && <4.12
+              , containers
+              , haskell-src-exts
+              , optparse-applicative
+              , text
+  
+  
 executable numhask-graph
   main-is: numhask-graph.hs
   hs-source-dirs:
@@ -43,14 +56,3 @@ executable numhask-graph
   default-language: Haskell2010
 
 
-executable numhask-typeclasses
-  main-is: numhask-typeclasses.hs
-  hs-source-dirs:
-                 app
-  default-extensions: OverloadedStrings
-  build-depends:
-                base >=4.7 && <4.12
-              , containers
-              , haskell-src-exts
-              , optparse-applicative
-              , text
