--- a/numhask-bench/numhask-bench.cabal
+++ b/numhask-bench/numhask-bench.cabal
@@ -41,9 +41,11 @@ executable numhask-bench
     , numhask-array
     , numhask-prelude >= 0.1.0.0 && < 0.2
     , optparse-generic
-    , perf
+    , perf >= 0.4.1.0
+    , perf-analysis >= 0.0.1.1
     , protolude
     , scientific
     , tdigest
     , text
+    , vector
   default-language: Haskell2010
