--- a/numhask-bench/stack.yaml
+++ b/numhask-bench/stack.yaml
@@ -1,15 +1,17 @@
-resolver: nightly-2018-05-06
+resolver: nightly-2018-05-28
 
 packages:
   - .
   - ../numhask
   - ../numhask-prelude
   - ../numhask-array
+  - ../numhask-test
 
 extra-deps:
   - dimensions-0.3.2.0
   - tdigest-0.2
-  - perf-0.4.0.1
+  - perf-0.4.1.0
+  - perf-analysis-0.0.1.1
 
 allow-newer: true
 
