--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -51,6 +51,7 @@ library
       NumHask.Algebra.Multiplicative
       NumHask.Algebra.Singleton
       NumHask.Data
-      NumHask.Data.Complex            
+      NumHask.Data.Complex   
+      NumHask.Data.LogField         
   other-modules:
   default-language: Haskell2010
