--- a/numhask-test/numhask-test.cabal
+++ b/numhask-test/numhask-test.cabal
@@ -36,6 +36,8 @@ library
     , numhask-prelude >=0.1.0.0 && <0.2
     , tasty >= 1.0.1.1 && <1.2
     , tasty-quickcheck >= 0.9.2 && <1.0
+    , reflection >= 2.1 && < 2.2
+    --, constraints >= 0.9 < 1.0
   exposed-modules:
       NumHask.Laws
   default-language: Haskell2010
