--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -38,19 +38,20 @@ library
       base >=4.7 && <4.12
   exposed-modules:
       NumHask.Algebra
-      NumHask.Algebra.Group
-      NumHask.Algebra.Addition
-      NumHask.Algebra.PreludeCompat
-      NumHask.Algebra.Basis
-      NumHask.Algebra.Ring
-      NumHask.Algebra.Field
+      NumHask.Algebra.Abstract.Group
+      NumHask.Algebra.Abstract.Addition
+      NumHask.Algebra.Abstract.Multiplication
+      NumHask.Algebra.Linear.Hadamard
+      NumHask.Algebra.Abstract.Ring
+      NumHask.Algebra.Abstract.Field
       NumHask.Algebra.Integral
-      NumHask.Algebra.Rational
-      NumHask.Algebra.Metric
-      NumHask.Algebra.Module
-      NumHask.Algebra.Singleton
+      NumHask.Data.Rational
+      NumHask.Analysis.Metric
+      NumHask.Analysis.Banach
+      NumHask.Algebra.Abstract.Module
       NumHask.Data
       NumHask.Data.Complex   
-      NumHask.Data.LogField         
+      NumHask.Data.LogField    
+      NumHask.Data.PreludeCompat     
   other-modules:
   default-language: Haskell2010
