--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -44,6 +44,7 @@ library
       NumHask.Algebra.Linear.Hadamard
       NumHask.Algebra.Abstract.Ring
       NumHask.Algebra.Abstract.Field
+      NumHask.Algebra.Abstract.Homomorphism
       NumHask.Algebra.Integral
       NumHask.Data.Rational
       NumHask.Analysis.Metric
