Added a lot of outcommented instances and datatypes.
finished Addition instances

added Multiplicative instances

finished rational

added a lot of instances

more instances

finished instances for Complex and LogField

--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -51,8 +51,7 @@ library
       NumHask.Analysis.Banach
       NumHask.Algebra.Abstract.Module
       NumHask.Data
-    --   NumHask.Data.Complex   
-    --   NumHask.Data.LogField    
-      NumHask.Data.PreludeCompat     
+      NumHask.Data.Complex   
+      NumHask.Data.LogField       
   other-modules:
   default-language: Haskell2010
