--- a/numhask/numhask.cabal
+++ b/numhask/numhask.cabal
@@ -39,8 +39,8 @@ library
   exposed-modules:
       NumHask.Algebra
       NumHask.Algebra.Abstract.Group
-      NumHask.Algebra.Abstract.Addition
-      NumHask.Algebra.Abstract.Multiplication
+      NumHask.Algebra.Abstract.Additive
+      NumHask.Algebra.Abstract.Multiplicative
       NumHask.Algebra.Linear.Hadamard
       NumHask.Algebra.Abstract.Ring
       NumHask.Algebra.Abstract.Field
