--- a/numhask-prelude/stack.yaml
+++ b/numhask-prelude/stack.yaml
@@ -1,8 +1,8 @@
-resolver: nightly-2018-05-06
+resolver: nightly-2018-07-08
 
 packages:
   - .
-  # - ../numhask
+  - ../numhask
 
 extra-deps:
-  - numhask-0.2.3.0
+  # - numhask-0.2.3.0
