--- a/hunit-numhask/stack.yaml
+++ b/hunit-numhask/stack.yaml
@@ -1,8 +1,11 @@
-resolver: nightly-2018-07-08
+resolver: nightly-2018-05-06
 
 packages:
 - .
 - ../numhask
 
 extra-deps: []
+
+# Override default flag values for local packages and extra-deps
+# flags: {}
 
